# msp430-tests

./: Makefile  README  README.md  cross_msp430g2231.txt  meson.build
src/: blink.c  button.c  delay.c  pir.c
